Icon Updates and Adaptive layout bugfix

--- a/html/style.css
+++ b/html/style.css
@@ -12,7 +12,7 @@
   background-color: rgb(0, 0, 0);
   border-radius: 10px;
   height: auto;
-  margin: 10px;
+  margin: 2%;
 }
 
 #pagefont {
